matrix/rtc/03-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: matrix
spec:
  headers:
    accessControlAllowOriginList:
      - "*"
    accessControlAllowHeaders:
      - "Origin"
      - "X-Requested-With"
      - "Content-Type"
      - "Accept"
      - "Authorization"
      - "Date"
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
      - "OPTIONS"
    accessControlMaxAge: 86400
    addVaryHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-livekit-jwt
  namespace: matrix
spec:
  stripPrefix:
    prefixes:
      - "/livekit/jwt"
