matrix/rtc/04-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rtc
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rtc.julien-ivs.com`) && PathPrefix(`/livekit/sfu`)
      kind: Rule
      priority: 20
      services:
        - name: lk
          port: 7880

    - match: Host(`rtc.julien-ivs.com`)
      kind: Rule
      priority: 10
      middlewares:
        - name: cors
          namespace: matrix
        - name: strip-livekit-jwt
          namespace: matrix
      services:
        - name: lk-jwt
          port: 8080
